--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,3 +126,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+html body[data-scroll-locked] {
+	overflow-y: scroll !important;
+	margin-right: 0px !important;
+}
