feat: add review page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,7 +127,7 @@
   }
 }
 
-html body[data-scroll-locked] {
+/* html body[data-scroll-locked] {
 	overflow-y: scroll !important;
 	margin-right: 0px !important;
-}
+} */
